--- a/Build Survey Form/styles.css
+++ b/Build Survey Form/styles.css
@@ -2,7 +2,8 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: blue;
+    text-align: center;
+    background-color: #00ADEF;
 }
 
 header {
@@ -11,9 +12,20 @@ header {
 }
 
 form {
-    margin: 0 auto;
+    background-color: #F9CD05;
     max-width: 500px;
-    min-width: 300px;
+    text-align: left;
+    border: 2px solid rgba(29, 65, 140, 0.8);
+    border-radius: 25px
+}
+
+fieldset {
+    border: none;
+    border-bottom: 3px solid rgba(241, 92, 25, 0.4);
+}
+
+fieldset:last-of-type {
+    border-bottom: none;
 }
 
 label {
@@ -26,6 +38,20 @@ select {
     width: 100%;
 }
 
-input[type="checkbox"] {
-    margin: 0;
+.inline {
+    display: unset;
+    width: unset;
+    margin: 0 0.5rem 0 0;
+    vertical-align: middle;
+}
+
+input[type="checkboc"] {
+    margin-top: 0;
+}
+
+input[type="submit"] {
+    display: block;
+    width: 200px;
+    text-align: center;
+    margin: 0 auto 0.5rem auto;
 }
