--- a/Build Survey Form/styles.css
+++ b/Build Survey Form/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap');
+
 body {
     width: 100%;
     height: 100vh;
@@ -16,7 +18,8 @@ form {
     max-width: 500px;
     text-align: left;
     border: 2px solid rgba(29, 65, 140, 0.8);
-    border-radius: 25px
+    border-radius: 25px;
+    margin: auto auto;
 }
 
 fieldset {
