--- a/Tribute Page/styles.css
+++ b/Tribute Page/styles.css
@@ -30,7 +30,8 @@ section {
     display: block;
     text-align: center;
     background-color: #eeeeee8e;
-    max-width: 47%;
+    max-width: 55%;
+    min-width: 55%;
     margin: auto;
 }
 
